# openclaw-biohub

./: .env.example  .gitignore  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
agent/: AGENTS.md  SKILL.md  SOUL.md
biohub/: __init__.py  __main__.py  body_comp.py  cli.py  registry.py
clawhub/biohub/: CLAWSCAN.md  SKILL.md
clawhub/openclaw-biohub/: SKILL.md
dashboard/: next.config.ts  package-lock.json  package.json
dashboard/src/app/: layout.tsx  (+2 more)
db/: migrate_v0.1_to_v0.2.py  migrate_v0.2_to_v0.3.py  schema.sql
fixtures/: sample_blood_panel.txt  seed.py
openclaw_biohub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pipeline/: blood_marker_analytics.py  blood_panel_import.py  fix_blood_markers.py  glucose_analytics.py  parse_blood_panel.py  paths.py  physiological_age.py  requirements.txt  supplement_analytics.py  supplement_import.py  whoop_pattern_engine.py
pipeline/adapters/: _oauth_helpers.py  base.py
pipeline/body-sim/: README.md  bake_meshes.py  fetch_mh_data.sh  preview_glb.py
scripts/: migrate_from_openclaw_workspace.py
systemd/: secrets.env.example  whoop-oauth-handler.service
tests/: conftest.py  requirements.txt  test_adapters.py  test_apple_health.py  test_body_composition.py  test_cli.py  test_fitbit.py  test_garmin.py  test_healthkit_receiver.py  test_ingest_importers.py  test_libre.py  test_migration.py  test_multi_source_seed.py  test_oauth_helpers.py  test_oura.py  test_paths.py  test_pattern_engine.py  test_physiological_age.py  test_seed.py
(+83 files in other folders)
